# web-scanner

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/agents/: deployment-engineer.md  python-backend-engineer.md  senior-code-reviewer.md  ui-engineer.md
src/web_scanner/: __init__.py  browser.py  cli.py  config.py  models.py  orchestrator.py
src/web_scanner/ai/: __init__.py  analyzer.py  client.py
src/web_scanner/analyzers/: __init__.py  base.py  grammar_analyzer.py  link_analyzer.py  ocr_analyzer.py
src/web_scanner/crawler/: __init__.py  crawler.py
src/web_scanner/extractors/: __init__.py  base.py  html_extractor.py  screenshot_extractor.py  text_extractor.py
src/web_scanner/storage/: __init__.py  html_report.py  manager.py
src/web_scanner/utils/: __init__.py  logging.py
tests/: __init__.py  test_crawler.py  test_extractors.py  test_models.py
